Prevent social bar in article-container from stretching

--- a/src/app/pages/article-container/article-container.component.scss
+++ b/src/app/pages/article-container/article-container.component.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.social-bar {
+  align-self: flex-start;
+}
+
 .article-date {
   font-family: typography.$font-family-varela;
   font-size: 14px;
